# mvMotionAI

./: README.md
mvMotionAI/: .cvsignore  AUTHORS  BaseTypes.cbp  BaseTypes.layout  CMakeLists.txt  COPYING  CPPUnit Static Library.cbp  CPPUnit Static Library.depend  CPPUnit Static Library.layout  CustomAction.cbp  CustomAction.depend  CustomAction.layout  Doxyfile  Log.txt  LuaGLTest.cbp  LuaGLTest.depend  LuaGLTest.layout  Makefile.am  MotionAI.cbp  MotionAI.dsp  MotionAI.plg  NEWS  README  README.txt  TODO.txt  config.h  configure  configure.ac  mvBaseBehaviours.cbp  mvBaseBehaviours.depend  mvBaseBehaviours.layout  mvCBWorkspace.workspace  mvLua C Interface.cbp  mvLua C Interface.depend  mvLua C Interface.layout  mvMotion-CB.cbp  mvMotion-CB.depend  mvMotion-CB.layout  mvMotion-GLMain.cbp  mvMotion-GLMain.depend  (+16 more)
mvMotionAI/MotionAI_Development/: MotionAI_Development.dsp  MotionAI_Development.dsw  MotionAI_Development.ncb  MotionAI_Development.opt  MotionAI_Development.plg
mvMotionAI/VisualC++Workspace/: MotionAI_Development.dsp  MotionAI_Development.dsw  MotionAI_Development.ncb  MotionAI_Development.opt  MotionAI_Development.plg  mvStaticLibVC6.dsp  mvStaticLibVC6.plg  mvVC6OpenGL.dsp  mvVC6OpenGL.plg
mvMotionAI/backup/: Collision.cpp  GLTest.cpp  Utilities.h  Vec3.cpp  Vec3.h  mvBehaviour-Central.cpp  mvBehaviour-Central.h  mvBehaviour-Entry.h  mvBehaviour-Pursuit.cpp  mvBehaviour-Pursuit.h  mvBehaviour-Seek.cpp  mvBehaviour-SimpleFlock.cpp  mvBehaviour-SimpleFlock.h  mvBehaviour.cpp  mvBehaviour.h  mvEnum.cpp  mvEnum.h  mvEnums.cpp  mvForce.cpp  mvGroup.cpp  mvGroup.h  mvGroupBehaviour.cpp  mvLuaScript-Behaviour.cpp  mvLuaScript-Body.h  mvLuaScript-Group.cpp  mvLuaScript-Group.h  mvLuaScript-GroupBehaviour.cpp  mvLuaScript-Pathway.cpp  mvLuaScript-Pathway.h  mvLuaScript-Utilities.cpp  mvLuaScript-Utilities.h  mvLuaScript-Waypoint.cpp  mvLuaScript-Waypoint.h  mvLuaScript-World.cpp  mvLuaScript.cpp  mvMotionAI.h  mvObstacle.cpp  mvObstacle.h  mvPathway.cpp  mvProto_Behaviour.h  (+5 more)
mvMotionAI/docs/: DOCS-README.txt  Doxyfile  Doxyfile2  Doxyfile4  Doxyfile5  Doxyfile6  index.html  mv-CFunctions.html  mv-Entities.html  mv-Functionalities.html  mv-LuaFunctions.html  mvCinterface  mvCinterface2  mvCinterface3  mvCinterface4  mvCinterface5  mvMotionAI-Doxygen  mvMotionAI-Doxygen.txt  mvMotionAI-Doxygen3
mvMotionAI/docs/lua/: Doxyfile  mvMotionAI-luaFunc.py
mvMotionAI/examples-src/: Camera.cpp  Camera.h  CustomActionGLMain.cpp  GLMain.cpp  LuaFunc.txt  LuaFuncTest.cpp  Template.cpp  TemplateTest.cpp  TestAI.cpp  TimedHop.cpp  TimedHop.h  TypesSizeTest.cpp  mvLua.cpp  mvLua.h  mvLua_CFunctions.cpp  mvLua_CFunctions.h
mvMotionAI/examples-src/sideproject1/: LuaFunc.txt  LuaGLTest.cpp  README.txt  mvLua.cpp  mvLua_CFunctions.cpp
mvMotionAI/examples-src/sideproject3/: CTutorial3.cpp  CTutorial3.h  sideproject3.cpp  tutorial3.cpp
mvMotionAI/examples-src/sideproject4/: mvFlyingV.cpp  mvFlyingV.h  mvMovingAcross.cpp  mvMovingAcross.h  sideproject4.cpp
mvMotionAI/examples-src/test/: mvSampleTest.cpp
mvMotionAI/examples-src/tutorial1/: README.txt  tutorial1.cpp
mvMotionAI/examples-src/tutorial2/: GLMain.cpp  README.txt
mvMotionAI/examples-src/tutorial3/: CustomActionGLMain.cpp  README.txt  TimedHop.h
mvMotionAI/include/: mvActionLoaderList.h  mvBEntry.h  mvBEntryList.h  mvBEntryTimer.h  mvBEntryUtility.h  mvBaseAction.h  mvBaseForce.h  mvBehaviour-Central.h  mvBehaviour-Clone.h  mvBehaviour-Entry.h  mvBehaviour-Flee.h  mvBehaviour-List.h  mvBehaviour-Pursuit.h  mvBehaviour-Seek.h  mvBehaviour-SimpleFlock.h  mvBehaviour-Type.h  mvBehaviour.h  mvBehaviourResult.h  mvBehaviour_V2.h  mvBody.h  mvBodyCapsule.h  mvBody_V2.h  mvCapsuleList.h  mvCapsuleList.hpp  mvEnum.h  mvEnums.h  mvFactoryFunctionList.h  mvFactoryFunctionList.hpp  mvFlee.h  mvForce.h  mvForceCapsule.h  mvForceLoaderList.h  mvForceResult.h  mvGroup.h  mvGroupBNode_V2.h  mvGroupBehaviour.h  mvGroupBehaviourResult.h  mvGroupBehaviour_V2.h  mvGroupCapsule.h  mvGroup_V2.h  (+32 more)
mvMotionAI/include-other/: luaconf.h  win32-libs.txt
mvMotionAI/lib/: lib-mingw.txt  lib-ubuntu.txt
mvMotionAI/lib-other/: LUA-License.txt  freeglut-debug.lib  freeglut.lib  lua50.lib
mvMotionAI/misc/: DoxygenMainPage.cpp  EditedCode.txt  Input.txt  MIT License Template.txt  Motion AI Diagrams.doc  SortScript  htmlconvert.py  mvEnums.xls
mvMotionAI/mvLightfeather Conversion/: mvLFMotionAI-Types.h  mvLFQuaternion.cpp  mvLFQuaternion.h  mvLFVec3.cpp  mvLFVec3.h  mvLightfeather Conversion.cbp  mvLightfeather Conversion.layout  mvMotionAI-Types.h
mvMotionAI/sideproject4 - group behaviour functionality/: sideproject4 - group behaviour functionality.cbp  sideproject4 - group behaviour functionality.layout
mvMotionAI/src/: DEV-README.txt  mvBEntry.cpp  mvBEntryList.cpp  mvBEntryListNode.cpp  mvBEntryTimer.cpp  mvBEntryUtility.cpp  mvBaseAction.cpp  mvBaseForce.cpp  mvBehaviour-Central.cpp  mvBehaviour-Clone.cpp  mvBehaviour-Entry.cpp  mvBehaviour-Flee.cpp  mvBehaviour-List.cpp  mvBehaviour-Pursuit.cpp  mvBehaviour-Seek.cpp  mvBehaviour-SimpleFlock.cpp  mvBehaviour-Type.cpp  mvBehaviour.cpp  mvBehaviourResult.cpp  mvBehaviour_V2.cpp  mvBody.cpp  mvBodyCapsule.cpp  mvBody_V2.cpp  mvEnum.cpp  mvEnums.cpp  mvEvasion.cpp  mvFlee.cpp  mvFollowPath.cpp  mvForce.cpp  mvForceCapsule.cpp  mvForceResult.cpp  mvGravityForce.cpp  mvGroup.cpp  mvGroupBNode_V2.cpp  mvGroupBehaviour.cpp  mvGroupBehaviourResult.cpp  mvGroupBehaviour_V2.cpp  mvGroupCapsule.cpp  mvGroup_V2.cpp  mvIndexSet.cpp  (+36 more)
mvMotionAI/test/: Money.h  MoneyTest.cpp  MoneyTest.h  mvBListCPPUnitTest.cbp  mvBListCPPUnitTest.cpp  mvBListCPPUnitTest.depend  mvBListCPPUnitTest.h  mvBListCPPUnitTest.layout  mvBTimerCPPUnitTest.cpp  mvBTimerCPPUnitTest.h  mvBitFieldsUnitTest.cpp  mvBitFieldsUnitTest.h  mvShapeTest.cpp  mvShapeTest.h  mvTemplateCPPUnitTest.cpp  mvTemplateCPPUnitTest.h  mvTimer-CPPUNIT.cbp  mvTimer-CPPUNIT.depend  mvTimer-CPPUNIT.layout  mvTimerCPPUnit.cpp  mvTimerCPPUnit.h  mvVec3CPPUnitTest.cbp  mvVec3CPPUnitTest.depend  mvVec3CPPUnitTest.layout  mvVec3Test.cpp  mvVec3Test.h
(+246 files in other folders)
