lib_LIBRARIES= libmvMotionAIDEBUG.a libmvMotionAI.a
INCLUDES = -Iinclude -Iexperimental/include
include_HEADERS = mvMotionAI.h mvMotionAI-Types.h
libmvMotionAI_a_SOURCES = src/mvEnums.cpp src/mvMotionAI-Utilities.cpp src/mvForce.cpp src/mvVec3.cpp

libmvMotionAIDEBUG_a_SOURCES = src/mvEnums.cpp src/mvMotionAI-Utilities.cpp src/mvForce.cpp src/mvVec3.cpp
